update task queues

--- a/.env.template
+++ b/.env.template
@@ -11,5 +11,18 @@ COMMON_RATE_LIMIT_WINDOW_MS="1000"  # Window size for rate limiting (ms)
 COMMON_RATE_LIMIT_MAX_REQUESTS="20" # Max number of requests per window per IP
 
 # Database
-
 MONGODB_URI="mongodb://localhost:27017/your-database"
+
+# JWT
+JWT_SIGNING_KEY=your-super-secret-key
+JWT_ISSUER=your-app-name
+JWT_AUDIENCE=your-app-audience
+JWT_RT_AUDIENCE=your-refresh-token-audience
+USER_TOKEN_COOKIE=user-token
+USER_REFRESH_TOKEN_COOKIE=user-refresh-token
+ADMIN_TOKEN_COOKIE=admin-token
+ADMIN_REFRESH_TOKEN_COOKIE=admin-refresh-token
+
+
+REDIS_HOST="localhost"
+REDIS_PORT=6378
