--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
 	},
 	"dependencies": {
 		"@asteasolutions/zod-to-openapi": "7.3.2",
-		"cors": "2.8.5",
+		"bullmq": "^5.53.0",
+		"chalk": "^5.4.1",
+		"cookie-parser": "^1.4.7",
+		"cors": "^2.8.5",
 		"dotenv": "16.5.0",
 		"express": "5.1.0",
 		"express-rate-limit": "7.5.0",
 		"helmet": "8.1.0",
 		"http-status-codes": "2.3.0",
+		"ioredis": "^5.6.1",
+		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.16.0",
 		"mongoose": "^8.15.1",
 		"pino": "9.7.0",
@@ -34,8 +39,10 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@types/cors": "2.8.18",
+		"@types/cookie-parser": "^1.4.8",
+		"@types/cors": "^2.8.18",
 		"@types/express": "5.0.2",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/supertest": "6.0.3",
 		"@types/swagger-ui-express": "4.1.8",
 		"@vitest/coverage-v8": "3.1.4",
