--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"format": "biome format --write",
 		"test": "vitest run",
 		"test:cov": "vitest run --coverage",
-		"check": "pnpm lint && pnpm format && pnpm build && pnpm test"
+		"check": "npm lint && npm format && npm build && npm test"
 	},
 	"dependencies": {
 		"@asteasolutions/zod-to-openapi": "7.3.2",
@@ -32,6 +32,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.16.0",
 		"mongoose": "^8.15.1",
+		"node-cron": "^4.0.7",
 		"pino": "9.7.0",
 		"pino-http": "10.4.0",
 		"swagger-ui-express": "5.0.1",
@@ -43,6 +44,7 @@
 		"@types/cors": "^2.8.18",
 		"@types/express": "5.0.2",
 		"@types/jsonwebtoken": "^9.0.9",
+		"@types/node-cron": "^3.0.11",
 		"@types/supertest": "6.0.3",
 		"@types/swagger-ui-express": "4.1.8",
 		"@vitest/coverage-v8": "3.1.4",
@@ -69,6 +71,5 @@
 		"dts": true,
 		"splitting": false,
 		"skipNodeModulesBundle": true
-	},
-	"packageManager": "pnpm@10.11.0"
+	}
 }
