--- a/.env.template
+++ b/.env.template
@@ -22,7 +22,8 @@ USER_TOKEN_COOKIE=user-token
 USER_REFRESH_TOKEN_COOKIE=user-refresh-token
 ADMIN_TOKEN_COOKIE=admin-token
 ADMIN_REFRESH_TOKEN_COOKIE=admin-refresh-token
-
+TOKEN_EXPIRES="3600"
+REFRESH_TOKEN_EXPIRES="1296000"
 
 REDIS_HOST="localhost"
 REDIS_PORT=6378
