--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "express-typescript-boilerplate",
 	"version": "1.0.14",
 	"description": "An Express boilerplate backend",
-	"author": "Edwin Hernandez",
+	"author": "Paxton Huynh",
 	"repository": "edwinhern/express-typescript-2024",
 	"license": "MIT",
 	"main": "index.ts",
