--- a/biome.json
+++ b/biome.json
@@ -1,17 +1,37 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-	"vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-	"files": { "ignoreUnknown": false, "ignore": ["dist"] },
+	"vcs": {
+		"enabled": false,
+		"clientKind": "git",
+		"useIgnoreFile": false
+	},
+	"files": {
+		"ignoreUnknown": false,
+		"ignore": [
+			"dist"
+		]
+	},
 	"formatter": {
 		"enabled": true,
 		"lineWidth": 120,
 		"bracketSpacing": true
 	},
-	"organizeImports": { "enabled": true },
+	"organizeImports": {
+		"enabled": true
+	},
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"style": {
+				"noNonNullAssertion": "warn"
+			},
+			"complexity": {
+				"noStaticOnlyClass": "warn"
+			},
+			"correctness": {
+				"noUnnecessaryContinue": "warn"
+			}
 		}
 	}
 }
