--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,22 +6,24 @@ on:
   pull_request:
     branches: [master, main, develop]
 
+env:
+  # Easy configuration - just change these values to test different versions
+  NODE_VERSION: "20.x"
+  REDIS_VERSION: "7-alpine"
+  MONGODB_VERSION: "7"
+
 jobs:
   # Install dependencies and cache for other jobs
   setup:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Install dependencies
@@ -31,31 +33,27 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
 
   # Code quality checks
   lint:
     runs-on: ubuntu-latest
     needs: setup
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Restore node_modules
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies (if cache miss)
         run: npm ci
@@ -67,25 +65,21 @@ jobs:
   format:
     runs-on: ubuntu-latest
     needs: setup
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Restore node_modules
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies (if cache miss)
         run: npm ci
@@ -97,25 +91,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: setup
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Restore node_modules
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies (if cache miss)
         run: npm ci
@@ -127,19 +117,15 @@ jobs:
         uses: actions/cache@v4
         with:
           path: dist
-          key: ${{ runner.os }}-build-${{ matrix.node-version }}-${{ github.sha }}
+          key: ${{ runner.os }}-build-${{ env.NODE_VERSION }}-${{ github.sha }}
 
   # Run tests with services
   test:
     runs-on: ubuntu-latest
     needs: [setup, lint, format, build]
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     services:
       redis:
-        image: redis:7-alpine
+        image: redis:${{ env.REDIS_VERSION }}
         ports:
           - 6379:6379
         options: >-
@@ -149,7 +135,7 @@ jobs:
           --health-retries 5
 
       mongodb:
-        image: mongo:7
+        image: mongo:${{ env.MONGODB_VERSION }}
         ports:
           - 27017:27017
         env:
@@ -165,26 +151,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Restore node_modules
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Restore build artifacts
         uses: actions/cache@v4
         with:
           path: dist
-          key: ${{ runner.os }}-build-${{ matrix.node-version }}-${{ github.sha }}
+          key: ${{ runner.os }}-build-${{ env.NODE_VERSION }}-${{ github.sha }}
 
       - name: Install dependencies (if cache miss)
         run: npm ci
+
+      - name: Wait for services
+        run: |
+          echo "Waiting for Redis..."
+          timeout 30 bash -c 'until redis-cli -h localhost -p 6379 ping; do sleep 1; done'
+          echo "Waiting for MongoDB..."
+          timeout 30 bash -c 'until mongosh --host localhost:27017 --username admin --password password --authenticationDatabase admin --eval "db.adminCommand({ping: 1})"; do sleep 1; done'
 
       - name: Run tests
         run: npm run test
@@ -197,13 +190,9 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     needs: [setup, lint, format, build]
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     services:
       redis:
-        image: redis:7-alpine
+        image: redis:${{ env.REDIS_VERSION }}
         ports:
           - 6379:6379
         options: >-
@@ -213,7 +202,7 @@ jobs:
           --health-retries 5
 
       mongodb:
-        image: mongo:7
+        image: mongo:${{ env.MONGODB_VERSION }}
         ports:
           - 27017:27017
         env:
@@ -229,26 +218,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Restore node_modules
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Restore build artifacts
         uses: actions/cache@v4
         with:
           path: dist
-          key: ${{ runner.os }}-build-${{ matrix.node-version }}-${{ github.sha }}
+          key: ${{ runner.os }}-build-${{ env.NODE_VERSION }}-${{ github.sha }}
 
       - name: Install dependencies (if cache miss)
         run: npm ci
+
+      - name: Wait for services
+        run: |
+          echo "Waiting for Redis..."
+          timeout 30 bash -c 'until redis-cli -h localhost -p 6379 ping; do sleep 1; done'
+          echo "Waiting for MongoDB..."
+          timeout 30 bash -c 'until mongosh --host localhost:27017 --username admin --password password --authenticationDatabase admin --eval "db.adminCommand({ping: 1})"; do sleep 1; done'
 
       - name: Run tests with coverage
         run: npm run test:cov
@@ -262,35 +258,4 @@ jobs:
         with:
           file: ./coverage/lcov.info
           flags: unittests
-          name: codecov-umbrella-${{ matrix.node-version }}
-          fail_ci_if_error: false
-
-  # Security checks
-  security:
-    runs-on: ubuntu-latest
-    needs: setup
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-
-      - name: Restore node_modules
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-20.x-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Install dependencies (if cache miss)
-        run: npm ci
-
-      - name: Run security audit
-        run: npm audit --audit-level moderate
-
-      - name: Run dependency check
-        run: npx audit-ci --moderate
+          name: codecov-umbrella-${{ e
