--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,6 @@ on:
 env:
   # Easy configuration - just change these values to test different versions
   NODE_VERSION: "20.x"
-  REDIS_VERSION: "7-alpine"
-  MONGODB_VERSION: "7"
 
 jobs:
   # Install dependencies and cache for other jobs
@@ -125,7 +123,7 @@ jobs:
     needs: [setup, lint, format, build]
     services:
       redis:
-        image: redis:${{ env.REDIS_VERSION }}
+        image: redis:7-alpine
         ports:
           - 6379:6379
         options: >-
@@ -135,7 +133,7 @@ jobs:
           --health-retries 5
 
       mongodb:
-        image: mongo:${{ env.MONGODB_VERSION }}
+        image: mongo:7
         ports:
           - 27017:27017
         env:
@@ -192,7 +190,7 @@ jobs:
     needs: [setup, lint, format, build]
     services:
       redis:
-        image: redis:${{ env.REDIS_VERSION }}
+        image: redis:7-alpine
         ports:
           - 6379:6379
         options: >-
@@ -202,7 +200,7 @@ jobs:
           --health-retries 5
 
       mongodb:
-        image: mongo:${{ env.MONGODB_VERSION }}
+        image: mongo:7
         ports:
           - 27017:27017
         env:
@@ -258,4 +256,58 @@ jobs:
         with:
           file: ./coverage/lcov.info
           flags: unittests
-          name: codecov-umbrella-${{ e
+          name: codecov-umbrella-${{ env.NODE_VERSION }}
+          fail_ci_if_error: false
+
+  # Security checks
+  security:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
+
+      - name: Restore node_modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install dependencies (if cache miss)
+        run: npm ci
+
+      - name: Run security audit
+        run: npm audit --audit-level moderate
+
+      - name: Run dependency check
+        run: npx audit-ci --moderate
+        continue-on-error: true
+
+  # Optional: Multi-version testing (uncomment and modify as needed)
+  # multi-version-test:
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name == 'pull_request'
+  #   strategy:
+  #     matrix:
+  #       node-version: ["18.x", "20.x", "22.x"]
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Setup Node.js ${{ matrix.node-version }}
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ matrix.node-version }}
+  #         cache: "npm"
+  #
+  #     - name: Install dependencies
+  #       run: npm ci
+  #
+  #     - name: Run tests
+  #       run: npm test
