--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,21 +170,39 @@ jobs:
       - name: Install dependencies (if cache miss)
         run: npm ci
 
+      - name: Install service clients
+        run: |
+          # Install Redis CLI
+          sudo apt-get update
+          sudo apt-get install -y redis-tools
+
+          # Install MongoDB Shell
+          wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | sudo apt-key add -
+          echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-7.0.list
+          sudo apt-get update
+          sudo apt-get install -y mongodb-mongosh
+
       - name: Wait for services
         run: |
           echo "Waiting for Redis..."
-          until redis-cli -h localhost -p 6379 ping | grep -q PONG; do
-            echo "Redis not ready, waiting..."
+          for i in {1..30}; do
+            if redis-cli -h localhost -p 6379 ping | grep -q PONG; then
+              echo "Redis is ready!"
+              break
+            fi
+            echo "Redis not ready, waiting... ($i/30)"
             sleep 2
           done
-          echo "Redis is ready!"
 
           echo "Waiting for MongoDB..."
-          until mongosh --host localhost:27017 --username admin --password password --authenticationDatabase admin --eval "db.adminCommand('ping')" --quiet | grep -q '"ok" : 1'; do
-            echo "MongoDB not ready, waiting..."
+          for i in {1..30}; do
+            if mongosh --host localhost:27017 --username admin --password password --authenticationDatabase admin --eval "db.adminCommand('ping')" --quiet 2>/dev/null | grep -q '"ok" : 1'; then
+              echo "MongoDB is ready!"
+              break
+            fi
+            echo "MongoDB not ready, waiting... ($i/30)"
             sleep 2
           done
-          echo "MongoDB is ready!"
 
       - name: Run tests
         run: npm run test
