--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,26 +121,26 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: [setup, lint, format, build]
-    services:
-      redis:
-        image: redis:7-alpine
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    # services:
+    #   redis:
+    #     image: redis:7-alpine
+    #     ports:
+    #       - 6379:6379
+    #     options: >-
+    #       --health-cmd "redis-cli ping"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
 
-      mongodb:
-        image: mongo:7
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    #   mongodb:
+    #     image: mongo:7
+    #     ports:
+    #       - 27017:27017
+    #     options: >-
+    #       --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
 
     steps:
       - name: Checkout code
@@ -167,39 +167,39 @@ jobs:
       - name: Install dependencies (if cache miss)
         run: npm ci
 
-      - name: Install service clients
-        run: |
-          # Install Redis CLI
-          sudo apt-get update
-          sudo apt-get install -y redis-tools
+      # - name: Install service clients
+      #   run: |
+      #     # Install Redis CLI
+      #     sudo apt-get update
+      #     sudo apt-get install -y redis-tools
 
-          # Install MongoDB Shell
-          wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | sudo apt-key add -
-          echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-7.0.list
-          sudo apt-get update
-          sudo apt-get install -y mongodb-mongosh
+      #     # Install MongoDB Shell
+      #     wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | sudo apt-key add -
+      #     echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-7.0.list
+      #     sudo apt-get update
+      #     sudo apt-get install -y mongodb-mongosh
 
-      - name: Wait for services
-        run: |
-          echo "Waiting for Redis..."
-          for i in {1..30}; do
-            if redis-cli -h localhost -p 6379 ping | grep -q PONG; then
-              echo "Redis is ready!"
-              break
-            fi
-            echo "Redis not ready, waiting... ($i/30)"
-            sleep 2
-          done
+      # - name: Wait for services
+      #   run: |
+      #     echo "Waiting for Redis..."
+      #     for i in {1..30}; do
+      #       if redis-cli -h localhost -p 6379 ping | grep -q PONG; then
+      #         echo "Redis is ready!"
+      #         break
+      #       fi
+      #       echo "Redis not ready, waiting... ($i/30)"
+      #       sleep 2
+      #     done
 
-          echo "Waiting for MongoDB..."
-          for i in {1..30}; do
-            if mongosh --host localhost:27017 --eval "db.adminCommand('ping')" --quiet 2>/dev/null | grep -q '"ok" : 1'; then
-              echo "MongoDB is ready!"
-              break
-            fi
-            echo "MongoDB not ready, waiting... ($i/30)"
-            sleep 2
-          done
+      #     echo "Waiting for MongoDB..."
+      #     for i in {1..30}; do
+      #       if mongosh --host localhost:27017 --eval "db.adminCommand('ping')" --quiet 2>/dev/null | grep -q '"ok" : 1'; then
+      #         echo "MongoDB is ready!"
+      #         break
+      #       fi
+      #       echo "MongoDB not ready, waiting... ($i/30)"
+      #       sleep 2
+      #     done
 
       - name: Run tests
         run: npm run test
@@ -212,26 +212,26 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     needs: [setup, lint, format, build]
-    services:
-      redis:
-        image: redis:7-alpine
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    # services:
+    #   redis:
+    #     image: redis:7-alpine
+    #     ports:
+    #       - 6379:6379
+    #     options: >-
+    #       --health-cmd "redis-cli ping"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
 
-      mongodb:
-        image: mongo:7
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    #   mongodb:
+    #     image: mongo:7
+    #     ports:
+    #       - 27017:27017
+    #     options: >-
+    #       --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
 
     steps:
       - name: Checkout code
@@ -258,27 +258,27 @@ jobs:
       - name: Install dependencies (if cache miss)
         run: npm ci
 
-      - name: Wait for services
-        run: |
-          echo "Waiting for Redis..."
-          for i in {1..30}; do
-            if redis-cli -h localhost -p 6379 ping | grep -q PONG; then
-              echo "Redis is ready!"
-              break
-            fi
-            echo "Redis not ready, waiting... ($i/30)"
-            sleep 2
-          done
+      # - name: Wait for services
+      #   run: |
+      #     echo "Waiting for Redis..."
+      #     for i in {1..30}; do
+      #       if redis-cli -h localhost -p 6379 ping | grep -q PONG; then
+      #         echo "Redis is ready!"
+      #         break
+      #       fi
+      #       echo "Redis not ready, waiting... ($i/30)"
+      #       sleep 2
+      #     done
 
-          echo "Waiting for MongoDB..."
-          for i in {1..30}; do
-            if mongosh --host localhost:27017 --eval "db.adminCommand('ping')" --quiet 2>/dev/null | grep -q '"ok" : 1'; then
-              echo "MongoDB is ready!"
-              break
-            fi
-            echo "MongoDB not ready, waiting... ($i/30)"
-            sleep 2
-          done
+      #     echo "Waiting for MongoDB..."
+      #     for i in {1..30}; do
+      #       if mongosh --host localhost:27017 --eval "db.adminCommand('ping')" --quiet 2>/dev/null | grep -q '"ok" : 1'; then
+      #         echo "MongoDB is ready!"
+      #         break
+      #       fi
+      #       echo "MongoDB not ready, waiting... ($i/30)"
+      #       sleep 2
+      #     done
 
       - name: Run tests with coverage
         run: npm run test:cov
