--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 	"private": true,
 	"scripts": {
 		"build": "tsc && tsup",
-		"start:dev": "node --import=tsx --watch src/index.ts",
-		"start:prod": "node dist/index.js",
+		"dev": "node --import=tsx --watch src/index.ts",
+		"prod": "node dist/index.js",
 		"lint": "biome lint --fix",
 		"format": "biome format --write",
 		"test": "vitest run",
