--- a/.env.template
+++ b/.env.template
@@ -25,5 +25,23 @@ ADMIN_REFRESH_TOKEN_COOKIE=admin-refresh-token
 TOKEN_EXPIRES="3600"
 REFRESH_TOKEN_EXPIRES="1296000"
 
+# Redis
 REDIS_HOST="localhost"
 REDIS_PORT=6378
+
+# Email
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+EMAIL_FROM=Your Name <your-email@gmail.com>
+
+# S3
+S3_PROVIDER=provider
+S3_ACCESS_KEY=s3_access_key
+S3_SECRET_KEY=s3_secret_key
+S3_ENDPOINT=s3_endpoint
+S3_DEFAULT_BUCKET_NAME=S3_DEFAULT_BUCKET_NAME
+S3_PUBLIC_BUCKET_NAME=S3_PUBLIC_BUCKET_NAME
+S3_TEMP_BUCKET_NAME=S3_TEMP_BUCKET_NAME
