--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
 	},
 	"dependencies": {
 		"@asteasolutions/zod-to-openapi": "7.3.2",
+		"@aws-sdk/client-s3": "^3.820.0",
+		"@aws-sdk/lib-storage": "^3.820.0",
+		"@aws-sdk/s3-request-presigner": "^3.820.0",
 		"bullmq": "^5.53.0",
 		"chalk": "^5.4.1",
 		"cookie-parser": "^1.4.7",
@@ -33,6 +36,7 @@
 		"mongodb": "^6.16.0",
 		"mongoose": "^8.15.1",
 		"node-cron": "^4.0.7",
+		"nodemailer": "^7.0.3",
 		"pino": "9.7.0",
 		"pino-http": "10.4.0",
 		"swagger-ui-express": "5.0.1",
@@ -45,6 +49,7 @@
 		"@types/express": "5.0.2",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node-cron": "^3.0.11",
+		"@types/nodemailer": "^6.4.17",
 		"@types/supertest": "6.0.3",
 		"@types/swagger-ui-express": "4.1.8",
 		"@vitest/coverage-v8": "3.1.4",
